use Asg instanceInfo and loadbalancer instead of Elastigroup